--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "atropos": "^2.0.2",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -24,8 +25,8 @@
     "eslint-config-next": "15.1.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^8.0.0",
     "prettier": "^3.4.2",
-    "typescript": "^5",
-    "husky": "^8.0.0"
+    "typescript": "^5"
   }
 }
